--- a/src/components/navbar/Navbar.scss
+++ b/src/components/navbar/Navbar.scss
@@ -66,6 +66,7 @@ nav {
     }
     .menuIcon {
       display: none;
+      z-index: 999;
       img {
         width: 36px;
         cursor: pointer;
@@ -82,6 +83,20 @@ nav {
       color: white;
       height: 100vh;
       width: 50%;
+      transition: all 1s ease;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      font-size: 22px;
+      &.active {
+        right: 0;
+      }
+      @include sm {
+        a {
+          display: initial;
+        }
+      }
     }
   }
 }
