--- a/src/components/searchbar/SearchBar.scss
+++ b/src/components/searchbar/SearchBar.scss
@@ -1,7 +1,70 @@
+@import "../../responsive.scss";
+
 .searchbar {
   .type {
     button {
       padding: 16px 36px;
+      border: 1px solid #999;
+      cursor: pointer;
+      background-color: white;
+      text-transform: capitalize;
+      border-bottom: none;
+      &.active {
+        background-color: black;
+        color: white;
+      }
+
+      &:first-child {
+        border-top-left-radius: 6px;
+        border-right: none;
+      }
+
+      &:last-child {
+        border-top-right-radius: 6px;
+        border-left: none;
+      }
+    }
+  }
+
+  form {
+    display: flex;
+    border: 1px solid #999;
+    justify-content: space-between;
+    height: 64px;
+    gap: 6px;
+
+    @include sm {
+      flex-direction: column;
+    }
+
+    input {
+      border: none;
+      padding: 0 10px;
+      width: 200px;
+
+      @include lg {
+        padding: 0 4px;
+
+        &:nth-child(2),
+        &:nth-child(2) {
+          width: 140px;
+        }
+      }
+    }
+
+    button {
+      border: none;
+      cursor: pointer;
+      background-color: rgb(242, 217, 107);
+      flex: 1;
+      img {
+        // height: 24px;
+        width: 100%;
+
+        @include lg {
+          width: auto;
+        }
+      }
     }
   }
 }
