--- a/src/pages/home/Home.scss
+++ b/src/pages/home/Home.scss
@@ -1,3 +1,5 @@
+@import "../../responsive.scss";
+
 .home {
   display: flex;
   height: 100%;
@@ -11,16 +13,30 @@
       padding-right: 120px;
       height: 100%;
 
+      @include md {
+        padding: 0;
+      }
+
       .title {
         font-size: 60px;
+
+        @include lg {
+          font-size: 48px;
+        }
       }
 
       .boxes {
         display: flex;
         justify-content: space-between;
 
+        @include sm {
+          display: none;
+        }
         h1 {
           font-size: 38px;
+          @include lg {
+            font-size: 32px;
+          }
         }
 
         h2 {
@@ -34,10 +50,18 @@
     flex: 2;
     background-color: rgb(196, 231, 243);
     position: relative;
+
+    @include md {
+      display: none;
+    }
     img {
       width: 115%;
       position: absolute;
       right: 0;
+
+      @include md {
+        display: none;
+      }
     }
   }
 }
