--- a/src/pages/layout/Layout.scss
+++ b/src/pages/layout/Layout.scss
@@ -7,6 +7,8 @@
   margin-right: auto;
   padding-left: 20px;
   padding-right: 20px;
+  display: flex;
+  flex-direction: column;
 
   @include lg {
     // background-color: rgb(246, 187, 165);
@@ -21,6 +23,6 @@
     max-width: 640px;
   }
   .content {
-    height: calc(100vh - 100px);
+    flex: 1;
   }
 }
