--- a/src/card/Card.scss
+++ b/src/card/Card.scss
@@ -1,2 +1,41 @@
 .card {
+  display: flex;
+  gap: 20px;
+
+  .imageContainer {
+    flex: 2;
+    height: 200px;
+
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      border-radius: 8px;
+    }
+  }
+  .textContainer {
+    flex: 3;
+    width: 100;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 10px;
+
+    img {
+      width: 16px;
+      height: 16px;
+    }
+
+    .title {
+      font-size: 20px;
+      font-weight: 600;
+      color: #444;
+      transition: all 0.4s ease;
+
+      &:hover {
+        color: black;
+        scale: 1.01;
+      }
+    }
+  }
 }
