--- a/src/pages/layout/Layout.scss
+++ b/src/pages/layout/Layout.scss
@@ -9,7 +9,7 @@
   padding-right: 20px;
   display: flex;
   flex-direction: column;
-
+  //overflow-y: auto;
   @include lg {
     // background-color: rgb(246, 187, 165);
     max-width: 1280px;
