--- a/src/pages/listPage/ListPage.scss
+++ b/src/pages/listPage/ListPage.scss
@@ -1,14 +1,29 @@
+@import "../../responsive.scss";
+
 .list-page {
   display: flex;
+  height: 100%;
+
   .listContainer {
     flex: 3;
-
+    height: 100vh;
+    overflow-y: scroll;
     .wrapper {
+      height: 100%;
       padding-right: 50px;
+      display: flex;
+      flex-direction: column;
+      gap: 50px;
+      padding-bottom: 50px;
     }
   }
   .mapContainer {
     flex: 2;
+    height: 100%;
     background-color: rgb(196, 231, 243);
+
+    @include md {
+      display: none;
+    }
   }
 }
