added map in the list page and small scss adjustments

--- a/src/components/navbar/Navbar.scss
+++ b/src/components/navbar/Navbar.scss
@@ -48,7 +48,7 @@ nav {
     display: flex;
     align-items: center;
     justify-content: flex-end;
-    background-color: rgb(196, 231, 243);
+    // background-color: rgb(196, 231, 243);
     height: 100%;
     // gap: 20px;
 
