added MUI register page and empty about and contact pages for now wip

--- a/src/card/Card.scss
+++ b/src/card/Card.scss
@@ -51,7 +51,7 @@
       font-weight: 300;
       padding: 4px;
       border-radius: 4px;
-      background-color: rgb(244, 231, 171);
+      background-color: #a5d0e7;
     }
 
     .bottom {
