--- a/src/components/filter/Filter.scss
+++ b/src/components/filter/Filter.scss
@@ -44,8 +44,8 @@
       padding: 10px;
       border: none;
       cursor: pointer;
-      background-color: #fece51;
-
+      background-color: #3093c7;
+      border-radius: 4px;
       img {
         width: 24px;
         height: 24px;
