--- a/src/components/navbar/Navbar.scss
+++ b/src/components/navbar/Navbar.scss
@@ -62,7 +62,9 @@ nav {
     }
 
     .register {
-      background-color: rgb(242, 217, 107);
+      background-color: #3093c7;
+      border-radius: 4px;
+      color: white;
     }
     .menuIcon {
       display: none;
