--- a/src/components/searchbar/SearchBar.scss
+++ b/src/components/searchbar/SearchBar.scss
@@ -55,7 +55,7 @@
     button {
       border: none;
       cursor: pointer;
-      background-color: rgb(242, 217, 107);
+      background-color: #3093c7;
       flex: 1;
       img {
         height: 24px;
